<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.agustinmadina.wildkingdom.CoralSnakeFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        tools:context="com.example.agustinmadina.wildkingdom.BrownBearFragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_view_CoralSnake"
            android:id="@+id/textViewAnimalTitle"
            android:layout_gravity="center_horizontal|top"
            android:textSize="30dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewAnimal"
            android:layout_gravity="center"
            android:src="@drawable/coral_snake" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_view_habitat"
            android:id="@+id/textViewHabitat" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewHabitatFull"
            android:text="The eastern coral snake is found in scattered localities in the southern Coastal Plain from North Carolina to Louisiana" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_view_description"
            android:id="@+id/textViewDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewDescriptionFull"
            android:layout_weight="0.07"
            android:text=" Adult eastern coral snakes are slender, medium sized.They have smooth scales and the anal plate is usually divided" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonNext"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/next_btn"
            android:background="@null" />
    </LinearLayout>
</FrameLayout>
